feat: complete Phase 1 Week 2 - Product Catalog Module
- Add Product and Category MongoDB models
- Implement CRUD operations with pagination
- Add hierarchical category support with breadcrumbs
- Integrate Cloudinary for image upload (FREE 25GB tier)
- Add search and filter functionality
- Configure role-based access (public read, admin write)
- Update API documentation